--- a/views/first_view.pug
+++ b/views/first_view.pug
@@ -2,6 +2,10 @@ doctype html
 html 
     head
         title Tia <3
+        meta(name="description" content="Tia the cat")
+        meta(name="keywords" content="Adorable, Cat, Tia")
+        meta(name="author" content="Ntdi")
+        meta(name="viewport" content="width=device-width, initial-scale=1.0")
         style 
             include ./style.css
     body 
