--- a/views/first_view.pug
+++ b/views/first_view.pug
@@ -6,6 +6,7 @@ html
         meta(name="keywords" content="Adorable, Cat, Tia")
         meta(name="author" content="Ntdi")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        link(rel="icon" type="image/x-icon" href="./favicon.ico")
         style 
             include ./style.css
     body 
