updated copyright to be responsive, lol

--- a/views/style.css
+++ b/views/style.css
@@ -93,5 +93,11 @@ body {
     .copyright {
         font-size: 0.8rem;
     }
+
+    .footer {
+        position: relative !important;
+        display: flex;
+        justify-content: center;
+    }
 }
  
